--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,18 @@ about:
 ---
 # About Me
 
-I'm Richard. I work as a Data Scientist for a startup and I'm also a Ph.D. student in Physics at [Federal University of ABC](https://www.ufabc.edu.br/en/) at the [Quantum Information Group](https://www.quantumufabc.org/). For a quick overview of my education and professional experience you can check my cv [here](cv.qmd).
+I'm Richard. I work as a Data Scientist for a startup and I'm also a Ph.D. student in Physics at [Federal University of ABC](https://www.ufabc.edu.br/en/) at the [Quantum Information Group](https://www.quantumufabc.org/). 
+
+# Resume
+
+My resume can be found here:
+
+[in english](/resume/resume_english.pdf)
+
+[in portuguese](/resume/resume_portuguese.pdf)
+
+# Artwork
+
 I also do some digital painting from time to time. Here's my latest artwork:
 
 <p style="text-align:center;"><img src="https://cdnb.artstation.com/p/assets/images/images/061/332/229/large/richard-costa-aws2.jpg?1680546500" style="width: 70%; height: 70%"/></p>
