--- a/index.qmd
+++ b/index.qmd
@@ -4,26 +4,29 @@ image: profile_image.jpg
 about:
     template: jolla
     links:
-        - icon: github
-          text: Github
-          href: https://github.com/richard-costa
         - icon: linkedin
           text: LinkedIn
           href: https://www.linkedin.com/in/richard-silva-costa
-        - icon: ""
-          text: "{{< fa palette >}} ArtStation"
+
+        - icon: github
+          text: Github
+          href: https://github.com/richard-costa
+        
+        - icon: palette
+          text: ArtStation
           href: https://richardcosta.artstation.com
 ---
-# About Me
+### About Me
 
-I'm Richard. I work as a Data Scientist for a startup and I'm also a Ph.D. student in Physics at [Federal University of ABC](https://www.ufabc.edu.br/en/) with the [Quantum Information Group](https://www.quantumufabc.org/). 
+I'm a Data Scientist working for [Atento](https://atento.com/en/). Data Science is a huge field, a whole landscape to be explored, and I'm interested in much of what's going on in this field. 
 
-# Resume
+I'm also a Ph.D. student in Physics at [Federal University of ABC](https://www.ufabc.edu.br/en/) with the [Quantum Information Group](https://www.quantumufabc.org/). My master's thesis was on a very niche subject, concerning the calculation of some thermodynamic quantities for a specific kind of fermionic field. 
 
-[portuguese](/resume/resume_portuguese.pdf) | [english](/resume/resume_english.pdf)
+My resume can be found here:
 
-# Artwork
+[english](/resume/resume_english.pdf) | [português](/resume/resume_portuguese.pdf) 
 
-I also do some digital painting from time to time. Here's my latest artwork:
+___
+### Painting
 
-<p style="text-align:center;"><img src="https://cdnb.artstation.com/p/assets/images/images/061/332/229/large/richard-costa-aws2.jpg?1680546500" style="width: 70%; height: 70%"/></p>
+One of my hobbies is digital painting. You can see my artwork on my `artstation` profile below.
