--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
 # title: ""
 about:
-    template: jolla
+    template: marquee
     links:
         - icon: linkedin
           text: LinkedIn
