--- a/notes.qmd
+++ b/notes.qmd
@@ -2,4 +2,25 @@
 title: ""
 ---
 
-{{< include notes/README.md >}}
+🌱: draft
+
+🌿: work in progress
+
+🌲: mature
+
+---
+
+### Quantum Mechanics
+
+- Quantum Mechanics II 
+  - [🌱 Review of Quantum Mechanics](notes/qm_ii/qm_review.md)
+
+- Mathematical Formalism
+  - [🌱 Dirac Notation](notes/qm_dirac_notation.md)
+ 
+
+### Logic
+
+- [🌱 Introduction to Logic](notes/logic_intro.md)
+
+### Philosophy
