--- a/posts.qmd
+++ b/posts.qmd
@@ -6,4 +6,5 @@ listing:
   # type: grid # or `default` or `table`; each type has its own set of yaml options to include
   sort: "date desc" # can also sort on more than one field
   categories: true # allows you to sort posts by assigned categories 
+  type: default # options: default, grid, table https://quarto.org/docs/websites/website-listings.html#listing-types
 ---
