--- a/resources.qmd
+++ b/resources.qmd
@@ -14,6 +14,16 @@ ___
 ## Mathematical Physics
 
 - [nlab entry on mathematical physics](https://ncatlab.org/nlab/show/mathematical+physics).
+---
+# Linux 
+
+## Omarchy
+
+Blog posts about Omarchy, an Arch-Linux based distro (or a bunch configurations if you want to call it that way):
+
+- [installing cosmic and changing sddm on omarchy](posts/1.cosmic-and-sddm-omarchy.qmd)
+- [installing a calendar widget on omarch](posts/2.calendar-omarchy.qmd)
+
 
 ___
 # Other
