--- a/notes.qmd
+++ b/notes.qmd
@@ -2,25 +2,27 @@
 title: ""
 ---
 
-🌱: draft
+::: {.callout-note appearance="minimal"}
+**Note maturity levels**
 
-🌿: work in progress
-
-🌲: mature
+- **Draft** — incomplete or exploratory notes
+- **Work in progress** — actively developed
+- **Mature** — stable and polished
+:::
 
 ---
 
 ### Quantum Mechanics
 
-- Quantum Mechanics II 
-  - [🌱 Review of Quantum Mechanics](notes/qm_ii/qm_review.md)
+- Quantum Mechanics II
+  - [Review of Quantum Mechanics](notes/qm_ii/qm_review.qmd)
+    <span class="note-status status-draft">DRAFT</span>
 
 - Mathematical Formalism
-  - [🌱 Dirac Notation](notes/qm_dirac_notation.md)
- 
+  - [Dirac Notation](notes/qm_dirac_notation.md)
+    <span class="note-status status-wip">WORK IN PROGRESS</span>
 
 ### Logic
 
-- [🌱 Introduction to Logic](notes/logic_intro.md)
-
-### Philosophy
+- [Introduction to Logic](notes/logic_intro.md)
+<span class="note-status status-draft">DRAFT</span>
